--- a/projects/13-10Adcdc/page.html
+++ b/projects/13-10Adcdc/page.html
@@ -29,27 +29,14 @@
     <div class="col-md-8">
       <h2>Project Description</h2>
       <p id="project-description">Project description</p>
-      <p>
-        LM2596 based DC-DC are very popular and cheap but they are big and can handle only 3A. I wanted to challenge myself and build a really small DC-DC.
-         The main usage I have for now is to power Servos from 6S Lipo battery. The overall dimensions are 15.5 x 17mm.
-      </p>
-      <p>The DC-DC is based on the NR111E IC.
-        <ul>
-          <li>Input voltage: 6.5V to 31V</li>
-          <li>Output voltage: 0.8V to 24V</li>
-          <li>Output current: 4A</li>
-        </ul>
-      </p>
-      <p>The current configuration of the V2.0 of the DC-DC have a fix output voltage of 5V. It can be easily adjust to 7.4V with one resistor. The V1.0 has three configuration (3.3V, 5V, 6V).</p>
-    </div>
-  </div>
-  <H2>History</H2>
-  <p>From left to right : V2.0 , V1.0, Classic LM2596 based DCDC </p>
-    <div class="row">
-      <div class="col-md-6">
-        <img src="history.jpg" alt="PCB3D" width="400" height="300">
-        <p class="text-center"><small></small></p>
-      </div>
+
+      <p>I’m taking on a small challenge: designing a compact high-power DC-DC converter with a custom heatsink. 
+        The specifications include a 10A DC-DC converter with an input range of 4.5-40V and an output range of 0.8-24V. 
+        The custom heatsink design is currently in progress.
+      </p> 
+
+      
+      
     </div>
   </div>
 
