--- a/projects/7-dcdc/page.html
+++ b/projects/7-dcdc/page.html
@@ -19,11 +19,11 @@
     </nav>
 
 <div class="container mt-5">
-  <h1 class="text-center mb-5" id="project-name">Project Name</h1>
+  <h1 class="text-start mb-5" id="project-name">Project Name</h1>
 
   <div class="row justify-content-center">
     <div class="col-md-4">
-      <img src="cover.jpg" alt="CoverNema" width="300" height="300">
+      <img src="cover.jpg" alt="CoverNema" width="300">
       <p class="text-center"><small>Cover Picture</small></p>
     </div>
     <div class="col-md-8">
@@ -74,16 +74,17 @@
   <div style="background-color: white; height: 100px;"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block" id="prev-button">
-        <a href="#" style="text-decoration: none; color: black;">Previous Project</a>
+      <button type="button" class="btn btn-secondary btn-block text-button" id="prev-button">
+        <a href="#" class="text-button">Previous Project</a>
       </button>
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-secondary btn-block" id="next-button">
-        <a href="#" style="text-decoration: none; color: black;">Next Project</a>
+      <button type="button" class="btn btn-secondary btn-block text-button" id="next-button">
+        <a href="#" class="text-button">Next Project</a>
       </button>
     </div>
   </div>
+  <div style="height: 20px;"></div>
   
 </div>
 
